--- a/output.css
+++ b/output.css
@@ -551,12 +551,8 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.float-right {
-  float: right;
-}
-
-.float-left {
-  float: left;
+.mb-auto {
+  margin-bottom: auto;
 }
 
 .ml-auto {
@@ -571,24 +567,8 @@ video {
   margin-left: 0.5rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
 }
 
 .mr-5 {
@@ -599,58 +579,52 @@ video {
   margin-top: 0.25rem;
 }
 
+.mb-\[50\%\] {
+  margin-bottom: 50%;
+}
+
+.mt-\[50\%\] {
+  margin-top: 50%;
+}
+
+.mt-\[25\%\] {
+  margin-top: 25%;
+}
+
+.mt-\[5\%\] {
+  margin-top: 5%;
+}
+
+.mt-\[15\%\] {
+  margin-top: 15%;
+}
+
 .flex {
   display: flex;
-}
-
-.flow-root {
-  display: flow-root;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-11 {
-  height: 2.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-8 {
   height: 2rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-10 {
-  width: 2.5rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-8 {
   width: 2rem;
 }
 
-.flex-row {
-  flex-direction: row;
+.items-center {
+  align-items: center;
 }
 
-.justify-end {
-  justify-content: flex-end;
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .rounded-xl {
@@ -669,19 +643,14 @@ video {
   border-top-width: 1px;
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-cyan {
-  --tw-border-opacity: 1;
-  border-color: hsl(178 100% 50% / var(--tw-border-opacity));
-}
-
 .border-softBlue {
   --tw-border-opacity: 1;
   border-color: hsl(215 51% 70% / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-mainBlue {
@@ -698,20 +667,12 @@ video {
   padding: 1.75rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
 
-.font-outfit {
+.font-Outfit {
   font-family: Outfit;
-}
-
-.text-\[19000px\] {
-  font-size: 19000px;
 }
 
 .text-\[18px\] {
@@ -726,24 +687,8 @@ video {
   font-weight: 300;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
-}
-
 .leading-8 {
   line-height: 2rem;
-}
-
-.leading-4 {
-  line-height: 1rem;
 }
 
 .leading-5 {
@@ -755,9 +700,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-lineBlue {
+.text-softBlue {
   --tw-text-opacity: 1;
-  color: hsl(215 32% 27% / var(--tw-text-opacity));
+  color: hsl(215 51% 70% / var(--tw-text-opacity));
 }
 
 .text-cyan {
@@ -765,14 +710,23 @@ video {
   color: hsl(178 100% 50% / var(--tw-text-opacity));
 }
 
-.text-softBlue {
-  --tw-text-opacity: 1;
-  color: hsl(215 51% 70% / var(--tw-text-opacity));
+@font-face {
+  font-family: 'Outfit';
+
+  src: local('Outfit'), url(./fonts/Outfit-VariableFont_wght.ttf) format('ttf');
 }
 
 @media (min-width: 1440px) {
   .isDesktop\:mt-\[50\%\] {
     margin-top: 50%;
+  }
+
+  .isDesktop\:mb-auto {
+    margin-bottom: auto;
+  }
+
+  .isDesktop\:mb-\[50\%\] {
+    margin-bottom: 50%;
   }
 
   .isDesktop\:w-\[350px\] {
