--- a/output.css
+++ b/output.css
@@ -599,6 +599,14 @@ video {
   margin-top: 15%;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -611,8 +619,68 @@ video {
   height: 100vh;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
 .w-8 {
   width: 2rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .items-center {
@@ -669,6 +737,10 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
 }
 
 .font-Outfit {
@@ -731,5 +803,27 @@ video {
 
   .isDesktop\:w-\[350px\] {
     width: 350px;
+  }
+}
+
+@media (min-width: 375px) {
+  .isMobile\:m-7 {
+    margin: 1.75rem;
+  }
+
+  .isMobile\:ml-1 {
+    margin-left: 0.25rem;
+  }
+
+  .isMobile\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
+  .isMobile\:ml-7 {
+    margin-left: 1.75rem;
+  }
+
+  .isMobile\:pl-1 {
+    padding-left: 0.25rem;
   }
 }
